fixed comment button width on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,6 +2,10 @@ html, body {
   margin: 0px;
 }
 
+.comment-button {
+  width: 100px;
+}
+
 #mobile-nav > ul {
   margin-top: 18px;
   padding: 0px;
